# Cluster_TFM_Naples_SingleInst

./: install_requirements.sh  pyproject.toml  requirements.txt  requirements_cluster.txt
FuturePackage/: __init__.py  roiClass.py
area_coverage_planning_python/conversion_functions/: __init__.py
area_coverage_planning_python/mosaic_algorithms/auxiliar_functions/grid_functions/: grid2D.py  inst2topo.py  topo2inst.py
area_coverage_planning_python/mosaic_algorithms/auxiliar_functions/multiprocess/: dataHandling.py
area_coverage_planning_python/mosaic_algorithms/auxiliar_functions/observation_geometry/: emissionang.py
area_coverage_planning_python/mosaic_algorithms/auxiliar_functions/planetary_coverage/: roicoverage.py
area_coverage_planning_python/mosaic_algorithms/auxiliar_functions/plot/: groundtrack.py  mapPlot.py  plotTour.py  trgobsvec.py
area_coverage_planning_python/mosaic_algorithms/auxiliar_functions/polygon_functions/: amsplit.py  closestSide.py  interppolygon.py  minimumWidthDirection.py  visibleroi.py
area_coverage_planning_python/mosaic_algorithms/auxiliar_functions/spacecraft_operation/: footprint.py  instpointing.py  processObservation.py  slewDur.py
area_coverage_planning_python/mosaic_algorithms/online_frontier_repair/: checkTaboo.py  frontierRepair.py  getFrontierTiles.py  insertTiles.py  map2grid.py  updateGrid.py
area_coverage_planning_python/mosaic_algorithms/sidewinder/: planSidewinderTour.py
mains_and_tests/precomputation/JUICE/: JUICE_Observability.py  checkOneROI.py
(+10 files in other folders)
